--- a/check_clean.ipynb
+++ b/check_clean.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ef2e73de",
+   "id": "7d4c808e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "36b1420f",
+   "id": "6e6babe1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bade194c",
+   "id": "e70a8cda",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "99d55ce9",
+   "id": "f297a82b",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2e8c2f57",
+   "id": "e944d97c",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c92ad859",
+   "id": "169c813e",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2fe6420c",
+   "id": "58762661",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,6 @@
       "loading Durham_England\n",
       "loading Edinburgh_Scotland\n",
       "loading Glasgow_Scotland\n",
-      "cohort enrolment file Not Found for Glasgow_Scotland\n",
       "loading Kennesaw_USA\n",
       "loading UOC_Spain\n",
       "loading UofT_Canada\n",
@@ -697,6 +696,33 @@
        "      <td>444</td>\n",
        "      <td>12</td>\n",
        "      <td>Edinburgh_Scotland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>H</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>120</td>\n",
+       "      <td>447</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Glasgow_Scotland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>H</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>159</td>\n",
+       "      <td>519</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Glasgow_Scotland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>H</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>129</td>\n",
+       "      <td>504</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Glasgow_Scotland</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -878,6 +904,9 @@
        "0  3/4/5/               2020     126   399           12  Edinburgh_Scotland\n",
        "1  3/4/5/               2021     150   429           12  Edinburgh_Scotland\n",
        "2  3/4/5/               2022     135   444           12  Edinburgh_Scotland\n",
+       "0       H               2020     120   447           24    Glasgow_Scotland\n",
+       "1       H               2021     159   519           24    Glasgow_Scotland\n",
+       "2       H               2022     129   504           26    Glasgow_Scotland\n",
        "0       1               2020    1500  6462            7        Kennesaw_USA\n",
        "1       1               2021    1605  6720            7        Kennesaw_USA\n",
        "2       1               2022    1521  5901            7        Kennesaw_USA\n",
@@ -956,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d29e2120",
+   "id": "6640ea75",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5da55ba4",
+   "id": "9f3b27da",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a6536508",
+   "id": "45681e1a",
    "metadata": {},
    "outputs": [
     {
@@ -1422,23 +1451,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1b119ce8",
+   "execution_count": 15,
+   "id": "dfb34083",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>module_count</th>\n",
+       "      <th>Student3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>institution</th>\n",
+       "      <th>AcademicYearStart</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CAU_Germany</th>\n",
+       "      <th>2022</th>\n",
+       "      <td>13</td>\n",
+       "      <td>549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Durham_England</th>\n",
+       "      <th>2020</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>27</td>\n",
+       "      <td>1053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>27</td>\n",
+       "      <td>1356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Edinburgh_Scotland</th>\n",
+       "      <th>2020</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>42</td>\n",
+       "      <td>2115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Glasgow_Scotland</th>\n",
+       "      <th>2020</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>24</td>\n",
+       "      <td>2319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>26</td>\n",
+       "      <td>2034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Kennesaw_USA</th>\n",
+       "      <th>2020</th>\n",
+       "      <td>54</td>\n",
+       "      <td>3189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>56</td>\n",
+       "      <td>2970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>54</td>\n",
+       "      <td>2709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">UOC_Spain</th>\n",
+       "      <th>2020</th>\n",
+       "      <td>28</td>\n",
+       "      <td>3873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>28</td>\n",
+       "      <td>4557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>29</td>\n",
+       "      <td>5361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">UofT_Canada</th>\n",
+       "      <th>2020</th>\n",
+       "      <td>6</td>\n",
+       "      <td>528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>12</td>\n",
+       "      <td>1038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>5</td>\n",
+       "      <td>399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Uppsala_Sweden</th>\n",
+       "      <th>2020</th>\n",
+       "      <td>13</td>\n",
+       "      <td>882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>15</td>\n",
+       "      <td>876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>15</td>\n",
+       "      <td>855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">VirginiaTech_USA</th>\n",
+       "      <th>2020</th>\n",
+       "      <td>22</td>\n",
+       "      <td>1839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2571</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      module_count  Student3\n",
+       "institution        AcademicYearStart                        \n",
+       "CAU_Germany        2022                         13       549\n",
+       "Durham_England     2020                         24      1485\n",
+       "                   2021                         27      1053\n",
+       "                   2022                         27      1356\n",
+       "Edinburgh_Scotland 2020                         11      1053\n",
+       "                   2021                         19      1275\n",
+       "                   2022                         42      2115\n",
+       "Glasgow_Scotland   2020                         24      1851\n",
+       "                   2021                         24      2319\n",
+       "                   2022                         26      2034\n",
+       "Kennesaw_USA       2020                         54      3189\n",
+       "                   2021                         56      2970\n",
+       "                   2022                         54      2709\n",
+       "UOC_Spain          2020                         28      3873\n",
+       "                   2021                         28      4557\n",
+       "                   2022                         29      5361\n",
+       "UofT_Canada        2020                          6       528\n",
+       "                   2021                         11      1080\n",
+       "                   2022                         12      1038\n",
+       "                   2023                          5       399\n",
+       "Uppsala_Sweden     2020                         13       882\n",
+       "                   2021                         15       876\n",
+       "                   2022                         15       855\n",
+       "VirginiaTech_USA   2020                         22      1839\n",
+       "                   2021                         22      2016\n",
+       "                   2022                         22      2571"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# enrolment data  2020 <= AY <= 2022\n",
     "# count of #modules and total enrolment per year\n",
     "\n",
     "\n",
     "enrolment_group = all_enrolments.groupby(['institution','AcademicYearStart'])\n",
-    "enrolment_years = pd.DataFrame({\"module_count\": enrolment_group['Students3'].count(), \"Student3\": enrolment_group['Students3'].sum()})\n"
+    "enrolment_years = pd.DataFrame({\"module_count\": enrolment_group['Students3'].count(), \"Student3\": enrolment_group['Students3'].sum()})\n",
+    "enrolment_years"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d0970321",
+   "id": "ae2b15b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e998a24b",
+   "id": "0ec1e9d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0b37036c",
+   "id": "6bfb070f",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1785,7 @@
        "      <th>Glasgow_Scotland</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -1615,7 +1857,7 @@
        "CAU_Germany                       False                          False   \n",
        "Durham_England                    False                           True   \n",
        "Edinburgh_Scotland                False                          False   \n",
-       "Glasgow_Scotland                   True                          False   \n",
+       "Glasgow_Scotland                  False                          False   \n",
        "Kennesaw_USA                      False                          False   \n",
        "UOC_Spain                         False                          False   \n",
        "UofT_Canada                       False                          False   \n",
@@ -1647,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7818374",
+   "id": "282018e1",
    "metadata": {},
    "outputs": [],
    "source": []
