Stage 1 review complete

--- a/curriculum_content/extract_annotated.ipynb
+++ b/curriculum_content/extract_annotated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "42313791",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "53cac527",
    "metadata": {},
    "outputs": [
@@ -25,18 +25,18 @@
        "       '[C] Kunkeler, Thom', '[C] Lennon, Ruth', '[C] Parkinson, Jack',\n",
        "       '[C] Sibia, Naaz (Naaz Sibia)', 'Annotations',\n",
        "       '[C] Altin, Rukiye (rukiye)', '[C] McNeill, Fiona',\n",
-       "       '[C] Minguillón, Julià (Julià Minguillón)',\n",
+       "       '[C] Minguillón, Julià (Julià Minguillón)', '[C] Parker, Miranda',\n",
        "       '[C] Peltsverger, Svetlana'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump_files = [\"20230622WG6_AllElectivesPart1-export-20230705-123616.csv\", \"20230622WG6_AllElectivesPart2-export-20230705-123639.csv\"]\n",
+    "dump_files = [\"20230622WG6_AllElectivesPart1-stage1.csv\", \"20230622WG6_AllElectivesPart2-stage1.csv\",\"20230622WG6_AllElectivesPart2-stage1.csv\"]\n",
     "dump_contents = []\n",
     "for dump_file in dump_files:\n",
     "    raw = pd.read_csv(os.path.join(\"coded\",dump_file), dtype='string').fillna(\"\")\n",
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8e3c411c",
+   "execution_count": 3,
+   "id": "7384cd49",
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +80,11 @@
        " '[C] Altin, Rukiye (rukiye)': '[C] Altin, Rukiye (rukiye)',\n",
        " '[C] McNeill, Fiona': '[C] McNeill, Fiona',\n",
        " '[C] Minguillón, Julià (Julià Minguillón)': '[C] Minguillón, Julià (Julià Minguillón)',\n",
+       " '[C] Parker, Miranda': '[C] Parker, Miranda',\n",
        " '[C] Peltsverger, Svetlana': '[C] Peltsverger, Svetlana'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d95e3af1",
    "metadata": {},
    "outputs": [
@@ -146,6 +147,12 @@
        "      <td>COMP3507</td>\n",
        "      <td>Durham_England</td>\n",
        "      <td>Annotation: Low confidence on this. Complexity...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>COMP3621</td>\n",
+       "      <td>Durham_England</td>\n",
+       "      <td>Annotation: This seems like the independent pr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -208,160 +215,94 @@
        "      <td>Annotation: Quantum Computing; User: Sara Hoos...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
+       "      <th>57</th>\n",
        "      <td>inf-EAeS</td>\n",
        "      <td>CAU_Germany</td>\n",
        "      <td>Annotation: Really don't know... AI? AL?; User...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75</th>\n",
+       "      <th>63</th>\n",
        "      <td>inf-EERP</td>\n",
        "      <td>CAU_Germany</td>\n",
        "      <td>Annotation: I don't know what an ERP system is...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76</th>\n",
+       "      <th>64</th>\n",
        "      <td>CGDD2012L</td>\n",
        "      <td>Kennesaw_USA</td>\n",
        "      <td>Annotation: this should probably be removed, u...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>77</th>\n",
+       "      <th>65</th>\n",
        "      <td>IT4123</td>\n",
        "      <td>Kennesaw_USA</td>\n",
        "      <td>Annotation: not sure if SPD is right, but the ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
+       "      <th>66</th>\n",
        "      <td>IT4203</td>\n",
        "      <td>Kennesaw_USA</td>\n",
        "      <td>Annotation: Not sure if the web is a specializ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
+       "      <th>77</th>\n",
        "      <td>CSE4983</td>\n",
        "      <td>Kennesaw_USA</td>\n",
        "      <td>Annotation: Internship; User: Sara Hooshangi; ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>102</th>\n",
+       "      <th>90</th>\n",
        "      <td>IT4603</td>\n",
        "      <td>Kennesaw_USA</td>\n",
        "      <td>Annotation: Blockchain; User: Sara Hooshangi; ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108</th>\n",
+       "      <th>93</th>\n",
+       "      <td>IT4893</td>\n",
+       "      <td>Kennesaw_USA</td>\n",
+       "      <td>Annotation: The title of the module includes I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
        "      <td>SWE4803</td>\n",
        "      <td>Kennesaw_USA</td>\n",
        "      <td>Annotation: Not quite game design enough for g...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
+       "      <th>104</th>\n",
        "      <td>5.579</td>\n",
        "      <td>UOC_Spain</td>\n",
        "      <td>Annotation: applied AL because the ACM doc inc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>128</th>\n",
+       "      <th>116</th>\n",
        "      <td>CS3744</td>\n",
        "      <td>VirginiaTech_USA</td>\n",
        "      <td>Annotation: ; User: Lecia Barker; Timestamp: 6...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
+       "      <th>119</th>\n",
        "      <td>CS4134</td>\n",
        "      <td>VirginiaTech_USA</td>\n",
        "      <td>Annotation: Quantum Computation; User: Sara Ho...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>139</th>\n",
+       "      <th>127</th>\n",
        "      <td>CS4704</td>\n",
        "      <td>VirginiaTech_USA</td>\n",
        "      <td>Annotation: Is this really an elective?; User:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>140</th>\n",
+       "      <th>128</th>\n",
        "      <td>CS4784</td>\n",
        "      <td>VirginiaTech_USA</td>\n",
        "      <td>Annotation: is this really an elective?; User:...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>141</th>\n",
+       "      <th>129</th>\n",
        "      <td>CS4884</td>\n",
        "      <td>VirginiaTech_USA</td>\n",
        "      <td>Annotation: Not sure that AL is the right tech...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>cxinfr11020</td>\n",
-       "      <td>Edinburgh_UK</td>\n",
-       "      <td>Annotation: ; User: Svetlana Peltsverger; Time...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>cxinfr11033</td>\n",
-       "      <td>Edinburgh_UK</td>\n",
-       "      <td>Annotation: ; User: Svetlana Peltsverger; Time...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>cxinfr11077</td>\n",
-       "      <td>Edinburgh_UK</td>\n",
-       "      <td>Annotation: ; User: Svetlana Peltsverger; Time...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>cxinfr11088</td>\n",
-       "      <td>Edinburgh_UK</td>\n",
-       "      <td>Annotation: ; User: Svetlana Peltsverger; Time...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>cxinfr11023</td>\n",
-       "      <td>Edinburgh_UK</td>\n",
-       "      <td>Annotation: ; User: Svetlana Peltsverger; Time...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>CS4524</td>\n",
-       "      <td>Kennesaw_USA</td>\n",
-       "      <td>Annotation: could not decide; User: Steven Bra...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>IT4523</td>\n",
-       "      <td>Kennesaw_USA</td>\n",
-       "      <td>Annotation: I have doubts about SPD but it's t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>CS3754</td>\n",
-       "      <td>VirginiaTech_USA</td>\n",
-       "      <td>Annotation: Cloud = SPD/Web?; User: Steven Bra...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>CS4284</td>\n",
-       "      <td>VirginiaTech_USA</td>\n",
-       "      <td>Annotation: Is this an elective, listed as cap...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>CS4284</td>\n",
-       "      <td>VirginiaTech_USA</td>\n",
-       "      <td>Annotation: Is this an elective, it is listed ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>CS4504</td>\n",
-       "      <td>VirginiaTech_USA</td>\n",
-       "      <td>Annotation: repeated?; User: Julià Minguillón;...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>CS4624</td>\n",
-       "      <td>VirginiaTech_USA</td>\n",
-       "      <td>Annotation: Not sure, could be lots of things!...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -371,6 +312,7 @@
        "        elective       institution  \\\n",
        "1       COMP3491    Durham_England   \n",
        "2       COMP3507    Durham_England   \n",
+       "7       COMP3621    Durham_England   \n",
        "10      COMP3677    Durham_England   \n",
        "12      COMP4117    Durham_England   \n",
        "13      COMP4127    Durham_England   \n",
@@ -381,36 +323,26 @@
        "27   cxinfr10083      Edinburgh_UK   \n",
        "32   cxinfr11209      Edinburgh_UK   \n",
        "34   cxinfr11099      Edinburgh_UK   \n",
-       "69      inf-EAeS       CAU_Germany   \n",
-       "75      inf-EERP       CAU_Germany   \n",
-       "76     CGDD2012L      Kennesaw_USA   \n",
-       "77        IT4123      Kennesaw_USA   \n",
-       "78        IT4203      Kennesaw_USA   \n",
-       "89       CSE4983      Kennesaw_USA   \n",
-       "102       IT4603      Kennesaw_USA   \n",
-       "108      SWE4803      Kennesaw_USA   \n",
-       "116        5.579         UOC_Spain   \n",
-       "128       CS3744  VirginiaTech_USA   \n",
-       "131       CS4134  VirginiaTech_USA   \n",
-       "139       CS4704  VirginiaTech_USA   \n",
-       "140       CS4784  VirginiaTech_USA   \n",
-       "141       CS4884  VirginiaTech_USA   \n",
-       "26   cxinfr11020      Edinburgh_UK   \n",
-       "27   cxinfr11033      Edinburgh_UK   \n",
-       "32   cxinfr11077      Edinburgh_UK   \n",
-       "40   cxinfr11088      Edinburgh_UK   \n",
-       "42   cxinfr11023      Edinburgh_UK   \n",
-       "81        CS4524      Kennesaw_USA   \n",
-       "92        IT4523      Kennesaw_USA   \n",
-       "127       CS3754  VirginiaTech_USA   \n",
-       "131       CS4284  VirginiaTech_USA   \n",
-       "136       CS4284  VirginiaTech_USA   \n",
-       "137       CS4504  VirginiaTech_USA   \n",
-       "138       CS4624  VirginiaTech_USA   \n",
+       "57      inf-EAeS       CAU_Germany   \n",
+       "63      inf-EERP       CAU_Germany   \n",
+       "64     CGDD2012L      Kennesaw_USA   \n",
+       "65        IT4123      Kennesaw_USA   \n",
+       "66        IT4203      Kennesaw_USA   \n",
+       "77       CSE4983      Kennesaw_USA   \n",
+       "90        IT4603      Kennesaw_USA   \n",
+       "93        IT4893      Kennesaw_USA   \n",
+       "96       SWE4803      Kennesaw_USA   \n",
+       "104        5.579         UOC_Spain   \n",
+       "116       CS3744  VirginiaTech_USA   \n",
+       "119       CS4134  VirginiaTech_USA   \n",
+       "127       CS4704  VirginiaTech_USA   \n",
+       "128       CS4784  VirginiaTech_USA   \n",
+       "129       CS4884  VirginiaTech_USA   \n",
        "\n",
        "                                           Annotations  \n",
        "1    Annotation: I think this is security because o...  \n",
        "2    Annotation: Low confidence on this. Complexity...  \n",
+       "7    Annotation: This seems like the independent pr...  \n",
        "10   Annotation: This is related to AI, but also to...  \n",
        "12   Annotation: quantum computing; User: Sara Hoos...  \n",
        "13   Annotation: very low confidence; User: Lecia B...  \n",
@@ -421,35 +353,24 @@
        "27   Annotation: data science is not always about A...  \n",
        "32   Annotation: Computational Neuroscience; User: ...  \n",
        "34   Annotation: Quantum Computing; User: Sara Hoos...  \n",
-       "69   Annotation: Really don't know... AI? AL?; User...  \n",
-       "75   Annotation: I don't know what an ERP system is...  \n",
-       "76   Annotation: this should probably be removed, u...  \n",
-       "77   Annotation: not sure if SPD is right, but the ...  \n",
-       "78   Annotation: Not sure if the web is a specializ...  \n",
-       "89   Annotation: Internship; User: Sara Hooshangi; ...  \n",
-       "102  Annotation: Blockchain; User: Sara Hooshangi; ...  \n",
-       "108  Annotation: Not quite game design enough for g...  \n",
-       "116  Annotation: applied AL because the ACM doc inc...  \n",
-       "128  Annotation: ; User: Lecia Barker; Timestamp: 6...  \n",
-       "131  Annotation: Quantum Computation; User: Sara Ho...  \n",
-       "139  Annotation: Is this really an elective?; User:...  \n",
-       "140  Annotation: is this really an elective?; User:...  \n",
-       "141  Annotation: Not sure that AL is the right tech...  \n",
-       "26   Annotation: ; User: Svetlana Peltsverger; Time...  \n",
-       "27   Annotation: ; User: Svetlana Peltsverger; Time...  \n",
-       "32   Annotation: ; User: Svetlana Peltsverger; Time...  \n",
-       "40   Annotation: ; User: Svetlana Peltsverger; Time...  \n",
-       "42   Annotation: ; User: Svetlana Peltsverger; Time...  \n",
-       "81   Annotation: could not decide; User: Steven Bra...  \n",
-       "92   Annotation: I have doubts about SPD but it's t...  \n",
-       "127  Annotation: Cloud = SPD/Web?; User: Steven Bra...  \n",
-       "131  Annotation: Is this an elective, listed as cap...  \n",
-       "136  Annotation: Is this an elective, it is listed ...  \n",
-       "137  Annotation: repeated?; User: Julià Minguillón;...  \n",
-       "138  Annotation: Not sure, could be lots of things!...  "
+       "57   Annotation: Really don't know... AI? AL?; User...  \n",
+       "63   Annotation: I don't know what an ERP system is...  \n",
+       "64   Annotation: this should probably be removed, u...  \n",
+       "65   Annotation: not sure if SPD is right, but the ...  \n",
+       "66   Annotation: Not sure if the web is a specializ...  \n",
+       "77   Annotation: Internship; User: Sara Hooshangi; ...  \n",
+       "90   Annotation: Blockchain; User: Sara Hooshangi; ...  \n",
+       "93   Annotation: The title of the module includes I...  \n",
+       "96   Annotation: Not quite game design enough for g...  \n",
+       "104  Annotation: applied AL because the ACM doc inc...  \n",
+       "116  Annotation: ; User: Lecia Barker; Timestamp: 6...  \n",
+       "119  Annotation: Quantum Computation; User: Sara Ho...  \n",
+       "127  Annotation: Is this really an elective?; User:...  \n",
+       "128  Annotation: is this really an elective?; User:...  \n",
+       "129  Annotation: Not sure that AL is the right tech...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
