Final pass attempt

--- a/process_curriculum_codes.ipynb
+++ b/process_curriculum_codes.ipynb
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "059ec403",
+   "id": "e3c13232",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5cc400a1",
+   "id": "689d83ff",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "13413449",
+   "id": "4538a3c6",
    "metadata": {},
    "outputs": [
     {
@@ -1880,11 +1880,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "417986ba",
+   "execution_count": 22,
+   "id": "56ed9cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>elective</th>\n",
+       "      <th>institution</th>\n",
+       "      <th>title</th>\n",
+       "      <th>07</th>\n",
+       "      <th>SE</th>\n",
+       "      <th>HCI</th>\n",
+       "      <th>15</th>\n",
+       "      <th>01</th>\n",
+       "      <th>08</th>\n",
+       "      <th>DM</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AR</th>\n",
+       "      <th>19</th>\n",
+       "      <th>17</th>\n",
+       "      <th>SEP</th>\n",
+       "      <th>13</th>\n",
+       "      <th>AI</th>\n",
+       "      <th>24</th>\n",
+       "      <th>09</th>\n",
+       "      <th>22</th>\n",
+       "      <th>OS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [elective, institution, title, 07, SE, HCI, 15, 01, 08, DM, 14, SEC, SF, 10, GIT, FPL, AL, SPD, 16, 02, PDC, MSF, 04, SDF, 18, 21, 03, NC, AR, 19, 17, SEP, 13, AI, 24, 09, 22, OS]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stage_two[~has_agreement_4_plus_any_code(stage_two)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "32b11747",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_electives_enrolment = pd.read_csv(os.path.join(\"enrolment\", \"all_elective_enrolment_rounded.csv\"))\n",
+    "stage_two_enrolment = stage_two.merge(all_electives_enrolment, left_on=['institution','elective'], right_on=['institution','MCode'], how='left')\n",
+    "stage_two_enrolment.sort_values('Students3', ascending=False)\n",
+    "stage_two_enrolment.to_csv(os.path.join(\"enrolment\", \"stage_two_enrolment.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2d580efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23096"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_cohorts_enrolment = pd.read_csv(os.path.join(\"enrolment\",\"all_cohort_enrolment_rounded.csv\"))\n",
+    "all_cohorts_enrolment.sort_values('Men3', ascending=False)\n",
+    "all_cohorts_enrolment['Men3'].sum() + all_cohorts_enrolment['Women3'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7f5e54bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stage_two_enrolment_cohort = stage_two_enrolment.merge(all_cohorts_enrolment, on=['Cohort','institution','AcademicYearStart'], how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c3c576f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Women3_x</th>\n",
+       "      <th>Men3_x</th>\n",
+       "      <th>Women3_y</th>\n",
+       "      <th>Men3_y</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>elective</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1DL034</th>\n",
+       "      <td>57.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>394.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1DL231</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1DL251</th>\n",
+       "      <td>129.0</td>\n",
+       "      <td>327.0</td>\n",
+       "      <td>258.0</td>\n",
+       "      <td>788.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1DL301</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1DL311</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inf-EAeS</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>168.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inf-EERP</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>168.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inf-EnlOpt</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>168.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inf-IoT</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>168.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>inf-TM</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>168.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>294 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Women3_x  Men3_x  Women3_y  Men3_y\n",
+       "elective                                      \n",
+       "1DL034          57.0   219.0     129.0   394.0\n",
+       "1DL231           0.0     0.0       0.0     0.0\n",
+       "1DL251         129.0   327.0     258.0   788.0\n",
+       "1DL301           0.0     0.0       0.0     0.0\n",
+       "1DL311           0.0     0.0       0.0     0.0\n",
+       "...              ...     ...       ...     ...\n",
+       "inf-EAeS         9.0    30.0      39.0   168.0\n",
+       "inf-EERP        15.0    51.0      39.0   168.0\n",
+       "inf-EnlOpt       3.0    24.0      39.0   168.0\n",
+       "inf-IoT          6.0    48.0      39.0   168.0\n",
+       "inf-TM           9.0    33.0      39.0   168.0\n",
+       "\n",
+       "[294 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stage_two_enrolment_collapsed = stage_two_enrolment_cohort.groupby('elective')[['Women3_x', 'Men3_x', 'Women3_y', 'Men3_y']].sum()\n",
+    "stage_two_enrolment_collapsed.to_csv(\"stage_two_enrolment_collapsed.csv\")\n",
+    "stage_two_enrolment_collapsed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1947a14c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "294"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(stage_two_enrolment.reset_index()['elective'].unique())"
+   ]
   }
  ],
  "metadata": {
